[package]
name = "titanium"
version = "1.0.0-alpha.4"
edition = "2021"

[lib]
path = "titanium/src/lib.rs"

#?RESERVED_FOR_TITANIUM_FRAMEWORK_START

#?RESERVED_FOR_TITANIUM_FRAMEWORK_END

[workspace]
members = [
    "titanium/assets",
    "titanium/common",
    "titanium/desktop",
    "titanium/macros",
    "titanium/utils",
    "titanium/web",

    #Examples
    "examples/desktop_discord",
    "examples/desktop_memory",
    "examples/desktop_gui",
    "examples/web",
]

[dependencies.titaniummacros]
path = "./titanium/macros"
package = "macros"
optional = true

[dependencies.async-std]
features = ["attributes"]
version = "1.12"
optional = true

[dependencies.titaniumutils]
path = "./titanium/utils"
package = "titanium_utils"
default-features = false
features = ["macros"]

[dependencies.titaniumassets]
path = "./titanium/assets"
package = "titanium_assets"
optional = true

[dependencies.titaniumcommon]
path = "./titanium/common"
package = "titanium_common"
optional = true

[dependencies.titaniumdesktop]
path = "./titanium/desktop"
package = "titanium_desktop"
optional = true

[dependencies.titaniumweb]
path = "./titanium/web"
package = "titanium_web"
optional = true

[features]
default = ["basic"]

basic = ["macros", "core"]
core = ["titaniumcommon", "titaniumassets"]
macros = ["titaniummacros", "async-std"]

# Desktop Target
desktop = ["titaniumdesktop"]
desktop-gui = ["desktop", "titaniumdesktop/gui"]
desktop-memory = ["desktop", "titaniumdesktop/memory"]
desktop-discord = ["desktop", "titaniumdesktop/discord"]
desktop-keybinds = ["desktop", "titaniumdesktop/keybinds"]
desktop-full = [
    "desktop-gui",
    "desktop-memory",
    "desktop-discord",
    "desktop-keybinds",
    "macros"
]

# Web Target
web = ["titaniumweb"]
web-socket = ["web", "titaniumweb/socket"]
web-full = ["web", "web-socket", "titaniumweb/full", "macros"]

#!TITANIUM_OK