[package]
name = "titanium"
version = "1.0.0-alpha.5"
edition = "2021"

[lib]
path = "titanium/src/lib.rs"

#?RESERVED_FOR_TITANIUM_FRAMEWORK_START

#?RESERVED_FOR_TITANIUM_FRAMEWORK_END

[[example]]
name = "desktop_discord"
path = "examples/desktop_discord/main.rs"
required-features = ["desktop-discord"]

[[example]]
name = "desktop_gui"
path = "examples/desktop_gui/main.rs"
required-features = ["desktop-gui"]

[[example]]
name = "desktop_memory"
path = "examples/desktop_memory/main.rs"
required-features = ["desktop-memory"]

[[example]]
name = "unknown_math"
path = "examples/unknown_math/main.rs"

[[example]]
name = "web_basic"
path = "examples/web_basic/main.rs"
required-features = ["web-full"]

[workspace]
members = [
    "titanium/*",
    "examples/*"
]
exclude = [
    "titanium/__pycache__",
    "titanium/scripts",
    "titanium/config",
    "titanium/src",
    
    "examples/jvm_basic",
]

[dependencies.titaniummacros]
path = "./titanium/macros"
package = "macros"
optional = true

[dependencies.async-std]
features = ["attributes"]
version = "1.12"
optional = true

[dependencies.titaniumutils]
path = "./titanium/utils"
package = "titanium_utils"
default-features = false
optional = true

[dependencies.titaniumassets]
path = "./titanium/assets"
package = "titanium_assets"
optional = true

[dependencies.titaniumcommon]
path = "./titanium/common"
package = "titanium_common"
optional = true

[dependencies.titaniumdesktop]
path = "./titanium/desktop"
package = "titanium_desktop"
optional = true

[dependencies.titaniumweb]
path = "./titanium/web"
package = "titanium_web"
optional = true

[features]
default = ["core"]

# Utility Features
core = ["common"]
basic = ["macros", "core", "assets"]
macros = ["titaniummacros", "async-std", "titaniumutils/macros"]
assets = ["titaniumassets", "titaniumutils/assets"]

# Platform Common Features
common = ["titaniumcommon"]
common-less-memory = ["common", "titaniumcommon/less-memory"]

# Desktop Target
desktop = ["titaniumdesktop"]
desktop-gui = ["desktop", "titaniumdesktop/gui"]
desktop-memory = ["desktop", "titaniumdesktop/memory"]
desktop-discord = ["desktop", "titaniumdesktop/discord"]
desktop-keybinds = ["desktop", "titaniumdesktop/keybinds"]
desktop-full = [
    "desktop-gui",
    "desktop-memory",
    "desktop-discord",
    "desktop-keybinds",
    "macros"
]

# Web Target
web = ["titaniumweb"]
web-socket = ["web", "titaniumweb/socket"]
web-full = ["web", "web-socket", "titaniumweb/full", "macros"]

#!TITANIUM_OK