[package]
name = "titanium_desktop"
version = "1.0.0-alpha.4"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies.titaniumutils]
package = "titanium_utils"
path = "../utils"
optional = false
default-features = false
features = ["macros"]

[dependencies.titaniummemory]
package = "titanium_desktop_memory"
path = "./memory"
optional = true

[dependencies.titaniumcommon]
package = "titanium_common"
path = "../common"
optional = true

[dependencies.titaniumgui]
package = "titanium_desktop_gui"
path = "./gui"
optional = true

[dependencies.titaniumdiscord]
package = "titanium_desktop_discord"
path = "./discord"
optional = true

[dependencies.titaniumkeybinds]
package = "titanium_desktop_keybinds"
path = "./keybinds"
optional = true

[features]
default = ["common", "memory"]
full = ["memory", "common", "gui", "discord", "keybinds"]

common = ["titaniumcommon"]
memory = ["titaniummemory"]
discord = ["titaniumdiscord"]
keybinds = ["titaniumkeybinds"]
gui = ["titaniumgui"]
