[package]
name = "titanium_desktop_gui"
version = "1.0.0-alpha.3"
edition = "2021"

[dependencies.titaniumutils]
package = "titanium_utils"
path = "../../utils"

[target.'cfg(windows)'.dependencies.titaniumkeybinds]
package = "titanium_desktop_keybinds"
path = "../keybinds"

[dependencies.titaniummemory]
package = "titanium_desktop_memory"
path = "../memory"

[dependencies.titaniumcommon]
package = "titanium_common"
path = "../../common"

[dependencies.druid]
version = "0.8"
features = [
    "image-all"
]

# Windows Specific items
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[build-dependencies.titaniumutils]
package = "titanium_utils"
path = "../../utils"

[package.metadata.winres]
OriginalFilename = "Titanium"
FileDescription = "Titanium"
