[package]
name = "titanium_desktop_keybinds"
version = "1.0.0-alpha.3"
edition = "2021"

[dependencies.titaniumutils]
package = "titanium_utils"
default-features = false
path = "../../utils"
features = [
    "macros"
]

[dependencies.inputbot]
git = "https://github.com/obv-mikhail/InputBot"
branch = "develop"
