[package]
name = "titanium_desktop_memory"
version = "1.0.0-alpha.4"
edition = "2021"

[dependencies]
sysinfo = "0.28"
libc = "0.2"

[target.'cfg(target_os="macos")'.dependencies]
mach = "0.3"

[target.'cfg(windows)'.dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
]
